--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<!-- Cards - Último card: Card 009 -->
 			<article class="artigo1">
 				<br>
-				<div class="row row-cols-1 row-cols-md-3 g-4">
+				<div class="row row-cols-1 row-cols-md-2 g-4">
 					<!-- Card 001 -->
 					<div id="facul1" class="col">
 						<div class="card h-100 video00">
@@ -75,11 +75,12 @@
 						  </div>
 						  <div class="card-footer">
 							<p class="texto04">
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal01">Links</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal02">Info</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal03">Notas</button>
-							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							  <a type="button" class="btn btn-outline-light" href="#blsk1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#topo">🔺</a>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal01">Links</button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal02">Info</button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal03">Notas</button>
+							  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  	<a type="button" class="btn btn-outline-light" href="#blsk1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -171,11 +172,12 @@
 						  </div>
 						  <div class="card-footer">
 							<p class="texto04">
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l1">Links</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l2">Info</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l3">Notas</button>
-							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							  <a type="button" class="btn btn-outline-light" href="#gti1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#facul1">🔺</a>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l1">Links</button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l2">Info</button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l3">Notas</button>
+							  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  	<a type="button" class="btn btn-outline-light" href="#gti1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -355,11 +357,12 @@
 						  </div>
 						  <div class="card-footer">
 							<p class="texto04">
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l1">Links</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l2">Info</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l3">Notas</button>
-							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							  <a type="button" class="btn btn-outline-light" href="#ing1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#blsk1">🔺</a>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l1">Links</button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l2">Info</button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l3">Notas</button>
+							  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  	<a type="button" class="btn btn-outline-light" href="#ing1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -459,11 +462,12 @@
 						  </div>
 						  <div class="card-footer">
 							<p class="texto04">
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l1">Links</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l2">Info</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l3">Notas</button>
-							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							  <a type="button" class="btn btn-outline-light" href="#dig1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#gti1">🔺</a>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l1">Links</button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l2">Info</button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l3">Notas</button>
+							  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  	<a type="button" class="btn btn-outline-light" href="#dig1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -552,11 +556,12 @@
 						  </div>
 						  <div class="card-footer">
 							<p class="texto04">
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l1">Links</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l2">Info</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l3">Notas</button>
-							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							  <a type="button" class="btn btn-outline-light" href="#out1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#ing1">🔺</a>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l1">Links</button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l2">Info</button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l3">Notas</button>
+							  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  	<a type="button" class="btn btn-outline-light" href="#out1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -640,11 +645,12 @@
 					  </div>
 					  <div class="card-footer">
 						<p class="texto04">
-						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal06">Links</button>
-						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal05">Info</button>
-						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal04">Notas</button>
-						  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-						  <a type="button" class="btn btn-outline-light" href="#poe1">🔻</a>
+							<a type="button" class="btn btn-outline-light" href="#dig1">🔺</a>
+						 	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal06">Links</button>
+							<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal05">Info</button>
+						  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal04">Notas</button>
+						  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+						  	<a type="button" class="btn btn-outline-light" href="#poe1">🔻</a>
 						</p>                   
 					  </div>
 					</div>
@@ -766,11 +772,12 @@
 					  </div>
 					  <div class="card-footer">
 						<p class="texto04">
-						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal09">Links</button>
-						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal08">Info</button>
-						  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal07">Notas</button>
-						  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-						  <a type="button" class="btn btn-outline-light" href="#dia1">🔻</a>
+							<a type="button" class="btn btn-outline-light" href="#out1">🔺</a>
+						  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal09">Links</button>
+						  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal08">Info</button>
+						  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal07">Notas</button>
+						  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+						  	<a type="button" class="btn btn-outline-light" href="#dia1">🔻</a>
 						</p>                   
 					  </div>
 					</div>
@@ -889,11 +896,12 @@
 						</div>
 						<div class="card-footer">
 							<p class="texto04">
-							<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l1">Links</button>
-							<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l2">Info</button>
-							<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l3">Notas</button>
-							<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							<a type="button" class="btn btn-outline-light" href="#tex1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#poe1">🔺</a>
+								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l1">Links</button>
+								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l2">Info</button>
+								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l3">Notas</button>
+								<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+								<a type="button" class="btn btn-outline-light" href="#tex1">🔻</a>
 							</p>                   
 						</div>
 						</div>
@@ -1005,11 +1013,12 @@
 						  </div>
 						  <div class="card-footer">
 							<p class="texto04">
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l1">Links</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l2">Info</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l3">Notas</button>
-							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							  <a type="button" class="btn btn-outline-light" href="#kon1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#dia1">🔺</a>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l1">Links</button>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l2">Info</button>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l3">Notas</button>
+						   		<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							    <a type="button" class="btn btn-outline-light" href="#kon1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -1099,11 +1108,12 @@
 						  </div>
 						  <div class="card-footer">
 							<p class="texto04">
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l1">Links</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l2">Info</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l3">Notas</button>
-							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							  <a type="button" class="btn btn-outline-light" href="#lan1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#tex1">🔺</a>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l1">Links</button>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l2">Info</button>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l3">Notas</button>
+							    <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							    <a type="button" class="btn btn-outline-light" href="#lan1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -1274,11 +1284,12 @@
 						  </div>
 						  <div class="card-footer">
 							<p class="texto04">
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l1">Links</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l2">Info</button>
-							  <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l3">Notas</button>
-							  <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							  <a type="button" class="btn btn-outline-light" href="#am1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#kon1">🔺</a>
+								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l1">Links</button>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l2">Info</button>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l3">Notas</button>
+							    <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							    <a type="button" class="btn btn-outline-light" href="#am1">🔻</a>
 							</p>                   
 						  </div>
 						</div>
@@ -1403,7 +1414,6 @@
 						  <div class="card-footer">
 							<p class="texto04">
 								<a type="button" class="btn btn-outline-light" href="#lan1">🔺</a>
-								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c12l1">Links</button>
 								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c12l3">Notas</button>
 								<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
 								<a type="button" class="btn btn-outline-light" href="#fim1">🔻</a>
@@ -1411,29 +1421,11 @@
 						  </div>
 						</div>
 					  </div>
-					  <div class="modal fade" id="c12l1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-						<div class="modal-dialog">
-						  <div class="modal-content modal2">
-						  <div class="modal-header modal1">
-							<h1 class="modal-title fs-5 texto06" id="exampleModalLabel">Links sobre EPDC</h1>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-						  </div>
-						  <div class="modal-body modal1">
-							<p class="texto04">
-								<a href="#" class="btn btn-light" target="_blank">Vazio</a>
-							</p>
-						  </div>
-						  <div class="modal-footer modal1">
-							<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
-						  </div>
-						  </div>
-						</div>
-						</div>
 					  <div class="modal fade" id="c12l3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog modal-lg">
 						  <div class="modal-content modal2">
 						  <div class="modal-header modal1">
-							<h1 class="modal-title fs-5 texto06" id="exampleModalLabel">Notas sobre EPDC</h1>
+							<h1 class="modal-title fs-5 texto06" id="exampleModalLabel">Notas sobre AM</h1>
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						  </div>
 						  <div class="modal-body modal1">
