--- a/index.html
+++ b/index.html
@@ -76,52 +76,13 @@
 						  <div class="card-footer p-0">
 							<p class="texto04">
 								<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-arrow-up texto01"></i></a>
-							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal03"><i class="bi bi-card-text"></i></button>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal03"><i class="bi bi-journal"></i></button>
 							  	<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 							  	<a type="button" class="btn btn-outline-light" href="#blsk1"><i class="bi bi-arrow-down texto01"></i></a>
 							</p>                   
 						  </div>
 						</div>
 					  </div>
-					  <div class="modal fade" id="modal01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-						<div class="modal-dialog">
-						  <div class="modal-content modal2">
-						  <div class="modal-header modal1">
-							<h1 class="modal-title fs-5 texto06" id="exampleModalLabel">Links sobre a Faculdade</h1>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-						  </div>
-						  <div class="modal-body modal1">
-							<p class="texto04">
-							  <a href="https://aulas.descomplica.com.br/graduacao/ciencia-da-computacao/" class="btn btn-light" target="_blank">Descomplica</a>
-							  <a href="https://chat.openai.com/" class="btn btn-light" target="_blank">ChatGPT</a>
-							</p>
-						  </div>
-						  <div class="modal-footer modal1">
-							<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
-						  </div>
-						  </div>
-						</div>
-						</div>
-						<div class="modal fade" id="modal02" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-						  <div class="modal-dialog">
-							<div class="modal-content modal2">
-							<div class="modal-header modal1">
-							  <h1 class="modal-title fs-5 texto06" id="exampleModalLabel">Informações sobre a Faculdade</h1>
-							  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-							</div>
-							<div class="modal-body modal1">
-							  <p class="texto04">
-								<ul>
-								  <li class="texto04"><strong class="texto04">RA:</strong> 2424554</li>
-								</ul>
-							  </p>
-							</div>
-							<div class="modal-footer modal1">
-							  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
-							</div>
-							</div>
-						  </div>
-						  </div>
 					  <div class="modal fade" id="modal03" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog modal-lg">
 						  <div class="modal-content modal2">
@@ -130,6 +91,15 @@
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						  </div>
 						  <div class="modal-body modal1">
+							<p class="texto04">
+								<a href="https://aulas.descomplica.com.br/graduacao/ciencia-da-computacao/" class="btn btn-light" target="_blank">Descomplica</a>
+								<a href="https://chat.openai.com/" class="btn btn-light" target="_blank">ChatGPT</a>
+							</p>
+							<p class="texto04">
+								<ul>
+								  <li class="texto04"><strong class="texto04">RA:</strong> 2424554</li>
+								</ul>
+							  </p>
 							<p class="texto04">
 								15 de outubro de 2024: Estudar espaços vetoriais.
 							</p> <hr>
@@ -154,7 +124,7 @@
 					<!-- Card 007 -->
 					<div id="blsk1" class="col">
 						<div class="card h-100 video00">
-						  <div class="card-body">
+						  <div class="card-body p-0">
 							<h1 class="card-subtitle text-light">BLSK</h1>
 							<p class="card-text text-warning">Força, resistência e movimento.</p>
 							<img class="img02" src="assets/img/c06.jpg"> <br> <br>
@@ -162,62 +132,19 @@
 								<img align="left" class="img01" src="assets/img/p04.jpg">
 								Um estilo de vida que integra musculação, alongamentos e lutas é a chave para um corpo forte e saudável. A musculação proporciona ganho de força e massa muscular, 
 								enquanto os alongamentos aumentam a flexibilidade e previnem lesões. As lutas, por sua vez, não só melhoram a resistência cardiovascular, mas também ensinam disciplina 
-								e autoconfiança. Juntos, esses elementos criam uma rotina equilibrada que promove saúde física e mental. Adotar esse estilo de vida traz benefícios duradouros, 
-								ajudando a manter energia e vitalidade no dia a dia.
+								e autoconfiança. Juntos, esses elementos criam uma...
 							  </p>
 						  </div>
-						  <div class="card-footer">
+						  <div class="card-footer p-0">
 							<p class="texto04">
-								<a type="button" class="btn btn-outline-light" href="#facul1">🔺</a>
-							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l1">Links</button>
-							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l2">Info</button>
-							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l3">Notas</button>
-							  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
-							  	<a type="button" class="btn btn-outline-light" href="#gti1">🔻</a>
+								<a type="button" class="btn btn-outline-light" href="#facul1"><i class="bi bi-arrow-up texto01"></i></a>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c7l3"><i class="bi bi-journal"></i></button>
+							  	<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
+							  	<a type="button" class="btn btn-outline-light" href="#gti1"><i class="bi bi-arrow-down texto01"></i></a>
 							</p>                   
 						  </div>
 						</div>
 					  </div>
-					  <div class="modal fade" id="c7l1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-						<div class="modal-dialog">
-						  <div class="modal-content modal2">
-						  <div class="modal-header modal1">
-							<h1 class="modal-title fs-5 texto06" id="exampleModalLabel">Links sobre BLSK</h1>
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-						  </div>
-						  <div class="modal-body modal1">
-							<p class="texto04">
-							  <a href="https://www.instagram.com/academia.movfit/" class="btn btn-light" target="_blank">MovFit</a>
-							</p>
-						  </div>
-						  <div class="modal-footer modal1">
-							<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
-						  </div>
-						  </div>
-						</div>
-						</div>
-						<div class="modal fade" id="c7l2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-						  <div class="modal-dialog">
-							<div class="modal-content modal2">
-							<div class="modal-header modal1">
-							  <h1 class="modal-title fs-5 texto06" id="exampleModalLabel">Informações sobre BLSK</h1>
-							  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-							</div>
-							<div class="modal-body modal1">
-							  <p class="texto04">
-								<ul>
-									<li class="texto04"><strong class="texto04">Peso:</strong> 65kg</li>
-									<li class="texto04"><strong class="texto04">Atualização:</strong> 15 de setembro de 2024</li>
-
-								</ul>
-							  </p>
-							</div>
-							<div class="modal-footer modal1">
-							  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
-							</div>
-							</div>
-						  </div>
-						  </div>
 					  <div class="modal fade" id="c7l3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog modal-lg">
 						  <div class="modal-content modal2">
@@ -227,10 +154,18 @@
 						  </div>
 						  <div class="modal-body modal1">
 							<p class="texto04">
-								Um estilo de vida que integra musculação, alongamentos e lutas é a chave para um corpo forte e saudável. A musculação proporciona ganho de força e massa muscular, 
-								enquanto os alongamentos aumentam a flexibilidade e previnem lesões. As lutas, por sua vez, não só melhoram a resistência cardiovascular, mas também ensinam disciplina 
-								e autoconfiança. Juntos, esses elementos criam uma rotina equilibrada que promove saúde física e mental. Adotar esse estilo de vida traz benefícios duradouros, 
+								...rotina equilibrada que promove saúde física e mental. Adotar esse estilo de vida traz benefícios duradouros, 
 								ajudando a manter energia e vitalidade no dia a dia.
+							</p> <hr>
+							<p class="texto04">
+								<ul>
+									<li class="texto04"><strong class="texto04">Peso:</strong> 65kg</li>
+									<li class="texto04"><strong class="texto04">Atualização:</strong> 15 de setembro de 2024</li>
+
+								</ul>
+							</p> <hr>
+							<p class="texto04">
+								<a href="https://www.instagram.com/academia.movfit/" class="btn btn-light" target="_blank">MovFit</a>
 							</p> <hr>
 								<div id="carousel1" class="carousel slide" data-bs-wrap="true">
 									<div class="carousel-inner">
@@ -356,8 +291,8 @@
 								<a type="button" class="btn btn-outline-light" href="#blsk1">🔺</a>
 							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l1">Links</button>
 							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l2">Info</button>
-							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l3">Notas</button>
-							  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c8l3"><i class="bi bi-journal"></i></button>
+							  	<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 							  	<a type="button" class="btn btn-outline-light" href="#ing1">🔻</a>
 							</p>                   
 						  </div>
@@ -461,8 +396,8 @@
 								<a type="button" class="btn btn-outline-light" href="#gti1">🔺</a>
 							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l1">Links</button>
 							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l2">Info</button>
-							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l3">Notas</button>
-							  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c9l3"><i class="bi bi-journal"></i></button>
+							  	<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 							  	<a type="button" class="btn btn-outline-light" href="#dig1">🔻</a>
 							</p>                   
 						  </div>
@@ -555,8 +490,8 @@
 								<a type="button" class="btn btn-outline-light" href="#ing1">🔺</a>
 							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l1">Links</button>
 							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l2">Info</button>
-							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l3">Notas</button>
-							  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c6l3"><i class="bi bi-journal"></i></button>
+							  	<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 							  	<a type="button" class="btn btn-outline-light" href="#out1">🔻</a>
 							</p>                   
 						  </div>
@@ -644,8 +579,8 @@
 							<a type="button" class="btn btn-outline-light" href="#dig1">🔺</a>
 						 	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal06">Links</button>
 							<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal05">Info</button>
-						  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal04">Notas</button>
-						  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+						  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal04"><i class="bi bi-journal"></i></button>
+						  	<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 						  	<a type="button" class="btn btn-outline-light" href="#poe1">🔻</a>
 						</p>                   
 					  </div>
@@ -771,8 +706,8 @@
 							<a type="button" class="btn btn-outline-light" href="#out1">🔺</a>
 						  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal09">Links</button>
 						  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal08">Info</button>
-						  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal07">Notas</button>
-						  	<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+						  	<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal07"><i class="bi bi-journal"></i></button>
+						  	<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 						  	<a type="button" class="btn btn-outline-light" href="#dia1">🔻</a>
 						</p>                   
 					  </div>
@@ -895,8 +830,8 @@
 								<a type="button" class="btn btn-outline-light" href="#poe1">🔺</a>
 								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l1">Links</button>
 								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l2">Info</button>
-								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l3">Notas</button>
-								<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c4l3"><i class="bi bi-journal"></i></button>
+								<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 								<a type="button" class="btn btn-outline-light" href="#tex1">🔻</a>
 							</p>                   
 						</div>
@@ -1012,8 +947,8 @@
 								<a type="button" class="btn btn-outline-light" href="#dia1">🔺</a>
 							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l1">Links</button>
 							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l2">Info</button>
-							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l3">Notas</button>
-						   		<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c5l3"><i class="bi bi-journal"></i></button>
+						   		<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 							    <a type="button" class="btn btn-outline-light" href="#kon1">🔻</a>
 							</p>                   
 						  </div>
@@ -1107,8 +1042,8 @@
 								<a type="button" class="btn btn-outline-light" href="#tex1">🔺</a>
 							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l1">Links</button>
 							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l2">Info</button>
-							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l3">Notas</button>
-							    <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c10l3"><i class="bi bi-journal"></i></button>
+							    <a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 							    <a type="button" class="btn btn-outline-light" href="#lan1">🔻</a>
 							</p>                   
 						  </div>
@@ -1283,8 +1218,8 @@
 								<a type="button" class="btn btn-outline-light" href="#kon1">🔺</a>
 								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l1">Links</button>
 							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l2">Info</button>
-							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l3">Notas</button>
-							    <a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+							    <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c11l3"><i class="bi bi-journal"></i></button>
+							    <a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 							    <a type="button" class="btn btn-outline-light" href="#am1">🔻</a>
 							</p>                   
 						  </div>
@@ -1410,8 +1345,8 @@
 						  <div class="card-footer">
 							<p class="texto04">
 								<a type="button" class="btn btn-outline-light" href="#lan1">🔺</a>
-								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c12l3">Notas</button>
-								<a type="button" class="btn btn-outline-light" href="#topo">Menu</a>
+								<button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#c12l3"><i class="bi bi-journal"></i></button>
+								<a type="button" class="btn btn-outline-light" href="#topo"><i class="bi bi-list"></i></a>
 								<a type="button" class="btn btn-outline-light" href="#fim1">🔻</a>
 							</p>                   
 						  </div>
