--- a/index.html
+++ b/index.html
@@ -1053,9 +1053,9 @@
                       			<a href="https://www.youtube.com/@Andarilhou/videos" class="btn btn-light" target="_blank">Canal</a>
                       			<a href="https://www.twitch.tv/andarilhoo" class="btn btn-light" target="_blank">Twitch</a> <br><br>
                       			<a href="https://www.youtube.com/@livesdoandarilho" class="btn btn-light" target="_blank">Canal de lives</a>
-                     			<a href="https://www.instant-gaming.com/pt/giveaway/andarilho" class="btn btn-light" target="_blank">Giveway</a> 
-                      			<a href="https://www.instagram.com/andarilhou/" class="btn btn-light" target="_blank">Instagram</a> <br><br>
-                      			<a href="https://discord.com/channels/302563407381528576/302563407381528576" class="btn btn-light" target="_blank">Discord</a>
+                     			<a href="https://www.instant-gaming.com/pt/giveaway/andarilho" class="btn btn-light" target="_blank">Giveway</a> <br><br>
+                      			<a href="https://www.instagram.com/andarilhou/" class="btn btn-light" target="_blank">Instagram</a>
+                      			<a href="https://discord.com/channels/302563407381528576/302563407381528576" class="btn btn-light" target="_blank">Discord</a> <br><br>
                       			<a href="https://bit.ly/3BygtDQ" class="btn btn-light" target="_blank">Setup</a>
 							</p> <hr>
 							<p class="texto04">
