--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#"><img src="assets/img/ico/00.ico" alt="ico"></a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				  <span class="navbar-toggler-icon"></span>
+					<i class="bi bi-list"></i>
 				</button>
 				<div class="collapse navbar-collapse justify-content-end header1" id="navbarSupportedContent">
 				  <ul class="navbar-nav">
