--- a/index.html
+++ b/index.html
@@ -91,16 +91,20 @@
 						  </div>
 						  <div class="modal-body modal1">
 							<p class="texto04">
-								<a href="https://aulas.descomplica.com.br/graduacao/ciencia-da-computacao/" class="btn btn-light" target="_blank">Descomplica</a>
-								<a href="https://chat.openai.com/" class="btn btn-light" target="_blank">ChatGPT</a>
+								<ul>
+								  <li class="texto04"><strong class="texto04">Ciência da Computação</li>
+								</ul>
 							</p>
 							<p class="texto04">
-								<ul>
-								  <li class="texto04"><strong class="texto04">RA:</strong> 2424554</li>
-								</ul>
-							  </p>
+								21 de outubro de 2024: Espaços Vetoriais.
+							</p>
 							<p class="texto04">
-								15 de outubro de 2024: Estudar espaços vetoriais.
+								<a href="https://aulas.descomplica.com.br/graduacao/ciencia-da-computacao/" class="btn btn-light" target="_blank">Descomplica</a>
+								<a href="https://chat.openai.com/" class="btn btn-light" target="_blank">ChatGPT</a> <br> <br>
+							</p> <hr>
+							<p class="texto04">
+								Aprendendo matemática: <br><br>
+								<a href="https://youtube.com/playlist?list=PLTPg64KdGgYhYpS5nXdFgdqEZDOS5lARB&si=7JqDvtFcHsBBgHEf" class="btn btn-light" target="_blank">Playlist</a>
 							</p> <hr>
 							<p class="texto04">
 								Este conhecimento é crucial para a criação de soluções inovadoras e eficientes, preparando os estudantes para 
