--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<!-- Cards - Último card: Card 009 -->
 			<article class="artigo1">
 				<br>
-				<div class="row row-cols-1 row-cols-md-1 g-1">
+				<div class="row row-cols-1 row-cols-md-3 g-1">
 					<!-- Card 001 -->
 					<div id="facul1" class="col">
 						<div class="card h-100 video00">
@@ -92,7 +92,7 @@
 						  <div class="modal-body modal1">
 							<p class="texto04">
 								<ul>
-								  <li class="texto04"><strong class="texto04">Ciência da Computação</li>
+								  <li class="texto04"><strong class="texto04">Ciência da Computação</strong></li>
 								</ul>
 							</p>
 							<p class="texto04">
@@ -116,7 +116,9 @@
 								empolgantes. Com um currículo voltado para a inovação e a adaptação às novas demandas do setor, a faculdade capacita os alunos a se destacarem em um campo em constante transformação, 
 								contribuindo significativamente para o avanço da tecnologia e da sociedade.
 							</p> <hr>
-							<p class="texto04 text-center">Fim</p>
+							<p class="texto04 text-center">
+								Fim
+							</p>
 						  </div>
 						  <div class="modal-footer modal1">
 							<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
